--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "Aaron Romel & Jesse Cooper",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
